--- a/store-front/package.json
+++ b/store-front/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "use-between": "^1.3.4"
